--- a/src/blocks/like-button/like-button.scss
+++ b/src/blocks/like-button/like-button.scss
@@ -76,8 +76,6 @@ $likeButtonBorderWidth: 1px;
   }
 
   &__text {
-    display: inline-block;
-    max-width: 23ch;
     position: relative;
     margin: 0 9px 0 20px;
   }
